--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "redis": "^5.8.2",
-    "socket.io": "^4.7.5"
-  },
-  "devDependencies": {
+    "socket.io": "^4.7.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
-    "prisma": "^5.15.0",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
