feat: add profile picture upload functionality
- Added multer for handling file uploads.
- Created upload middleware to manage file storage and validation.
- Updated User model to include profilePictureUrl field.
- Implemented updateProfilePicture endpoint in users controller.
- Added corresponding route for updating profile picture.
- Created migration to add profilePictureUrl column to User table.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# User-uploaded content
+/uploads
+
 # OS generated files
 .DS_Store
 .DS_Store?
