--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "redis": "^5.8.2",
     "socket.io": "^4.7.5",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "prisma": "^5.15.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "@types/multer": "^2.0.0"
   }
 }
