--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["multer"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
+  
 }
