--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^2.4.3",
@@ -28,7 +29,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
     "redis": "^5.8.2",
     "socket.io": "^4.7.5",
@@ -36,7 +37,6 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/multer": "^2.0.0",
     "prisma": "^5.15.0",
     "ts-node-dev": "^2.0.0"
   }
